--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/porfolioScreenShot1.png" alt="">
+              <img class="img-fluid" src="img/portfolio/porfolioScreenShot1.PNG" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
